<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MP3Player</string>
    <string name="songs_tab">Songs</string>
    <string name="artists_tab">Artists</string>
    <string name="albums_tab">Albums</string>
    <string name="playlist_tab">Playlists</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_playing">Playing</string>
    <string name="now_playing">Now Playing</string>
    <string name="song_name">Song Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="album_name">Album Name</string>
    <string name="lyrics">Lyrics</string>
    <string name="title_activity_lyrics">Lyrics</string>
    <string name="title_activity_playlist_songs">PlaylistSongs</string>
    <string name="title_activity_playlist_maker">PlaylistMaker</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="playlists">Playlists</string>
    <string name="new_playlist">New Playlist</string>
    <string name="make_playlist">Make Playlist</string>
</resources>
