<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.toni.mp3player.Playing">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/imageViewAlbumCover"
        android:src="@drawable/albumcover"
        android:layout_below="@+id/textViewNowPlaying"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/now_playing"
        android:id="@+id/textViewNowPlaying"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarSong"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/imageViewAlbumCover"
        android:layout_alignStart="@+id/imageViewAlbumCover"
        android:layout_alignRight="@+id/imageViewAlbumCover"
        android:layout_alignEnd="@+id/imageViewAlbumCover" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/song_name"
        android:id="@+id/textView"
        android:layout_below="@+id/imageViewAlbumCover"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lyrics"
        android:id="@+id/textViewLyrics"
        android:layout_below="@+id/textViewAlbum"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/album_name"
        android:id="@+id/textViewAlbum"
        android:layout_below="@+id/textViewArtist"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/artist_name"
        android:id="@+id/textViewArtist"
        android:layout_below="@+id/seekBarSong"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
